Remlacement get(0) -> getFirst()